--- a/back/versus/meditation/first_mod.yml
+++ b/back/versus/meditation/first_mod.yml
@@ -57,7 +57,7 @@ graphs:
 
 ################### Separation des ondes #################     \
           - id: split_p1
-            module: timeflux_dsp.nodes.filters
+            module: timeflux_dsp.nodes.filters  ## renvoi une Dataframe avec les 5 ondes split
             class: FilterBank
             params:
                 filters:
@@ -84,7 +84,7 @@ graphs:
 ##########################################################     /
 
 ################# partie calcule  ########################     \
-          - id: abs_powers_p1                 #valeur absolue pour chaque ondes delta -> gamma
+          - id: abs_powers_p1                 #valeur accumule pour chaque ondes delta -> gamma
             module: app-module.nodes.abs_power
             class: Power
             params:
@@ -98,7 +98,7 @@ graphs:
                  length: 3
                  step: 1
 
-          - id: log_p1
+          - id: log_p1                      #Log(abs_power) pour rapprocher les resultats
             module: app-module.nodes.reduct_diff_waves
             class: Log
 
@@ -106,16 +106,25 @@ graphs:
             module: app-module.nodes.reduct_diff_waves
             class: Log
 
-          - id: scoring_p1
-            module: app-module.nodes.scoring
-            class: Scoring
-            params:
-                w_delta: 1.6
+          - id: scoring_p1                    # renvoi le score base sur la somme du pourcentage de chaques
+            module: app-module.nodes.scoring  # ondes par rapport a l'ensemble
+            class: Scoring 
+            params:                           #chaque % est multiplie par un poid 'w'
+                w_delta: 1.6                  #si l'ensemble des 'w' == 1 alors score = 1
                 w_theta: 1.3
                 w_alpha: 1.1
                 w_beta: 0.8
                 w_gamma: 0.5
 
+          - id: scoring_p2                   
+            module: app-module.nodes.scoring  
+            class: Scoring 
+            params:                           
+                w_delta: 1.6                 
+                w_theta: 1.3
+                w_alpha: 1.1
+                w_beta: 0.8
+                w_gamma: 0.5
 ##########################################################     /
 
 ################## Display et Debugg ######################     \
@@ -146,7 +155,7 @@ graphs:
           - source: log_p1
             target: scoring_p1
           - source: scoring_p1
-            target: debugg_term
+            target: debugg_ui:p1
 
    ################### player 2
           - source: get_players:player_2
@@ -161,5 +170,9 @@ graphs:
           - source: split_p2
             target: abs_powers_p2
           - source: abs_powers_p2
-            target: debugg_ui:p2_bandpass
+            target: log_p2
+          - source: log_p2
+            target: scoring_p2
+          - source: scoring_p2
+            target: debugg_ui:p2
       rate: 10
