premier resultats OK, pour l'instant 2 possibilite, soit utiliser un graph ou els separeren 2, utiliser ## dans le fichier game.yml

--- a/back/game.yml
+++ b/back/game.yml
@@ -3,4 +3,5 @@ import:
     - substitute_players.yml # chargement de replay deja enregistre
     - versus/meditation/player_1.yml # traitement des ondes p1 et p2 en parallele
     - versus/meditation/player_2.yml 
-    - versus/meditation/join_p1_p2.yml 
+    - versus/meditation/join_p1_p2.yml
+    #- versus/meditation/first_mod.yml 
