add -A avec version fonctionnel (toujours meme probleme de synchro a regler)

--- a/back/versus/concentration/player_1.yml
+++ b/back/versus/concentration/player_1.yml
@@ -1,5 +1,5 @@
 graphs:
-    - id: first_mod # Recuperation du publisher (enregistrement ou de EEG) 
+    - id: player_1 # Recuperation du publisher (enregistrement ou de EEG) 
       nodes:
           - id: get_players
             module: timeflux.nodes.zmq
