--- a/back/versus/meditation/player_1.yml
+++ b/back/versus/meditation/player_1.yml
@@ -1,5 +1,5 @@
 graphs:
-    - id: first_mod # Recuperation du publisher (enregistrement ou de EEG) 
+    - id: player_1 # Recuperation du publisher (enregistrement ou de EEG) 
       nodes:
           - id: get_players
             module: timeflux.nodes.zmq
@@ -110,4 +110,4 @@ graphs:
             target: pub_result_p1
             
 
-      rate: 10
+      rate: 2
