--- a/back/versus/meditation/player_2.yml
+++ b/back/versus/meditation/player_2.yml
@@ -1,5 +1,5 @@
 graphs:
-    - id: first_mod # Recuperation du publisher (enregistrement ou de EEG) 
+    - id: player_2 # Recuperation du publisher (enregistrement ou de EEG) 
       nodes:
           - id: get_players
             module: timeflux.nodes.zmq
@@ -107,4 +107,4 @@ graphs:
             target: scoring_p2
           - source: scoring_p2
             target: pub_result_p2
-      rate: 10
+      rate: 2
