--- a/back/versus/concentration/join_p1_p2.yml
+++ b/back/versus/concentration/join_p1_p2.yml
@@ -15,6 +15,12 @@ graphs:
             module: timeflux.nodes.debug
             class: Display
 
+          - id: send_result
+            module: app-module.nodes.write_fd
+            class: Insert
+            params:
+                path: "./log.txt"
+
       edges:
           - source: get_p1_p2:result_p1
             target: final_diff:p1
@@ -22,5 +28,7 @@ graphs:
             target: final_diff:p2
           - source: final_diff
             target: debugg
+          - source: final_diff
+            target: send_result
 
       rate: 10
